<resources>
    <string name="app_name">Calculator</string>
    <string name="enter">Enter</string>
    <string name="add">+</string>
    <string name="one">1</string>
    <string name="doubleZero">00</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="four">4</string>
    <string name="x">X</string>
    <string name="equal">=</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="divide">/</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="seven">7</string>
    <string name="modulus">%</string>
    <string name="clear">C</string>
    <string name="appname">TextView</string>
    <string name="calculator">Calculator</string>
    <string name="x1">x</string>
    <string name="minus">minus</string>
    <string name="decimal">.</string>
    <string name="minus1">-</string>
</resources>