<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="300dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/toolbar" />

        <TextView
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/output"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="100dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <Button
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/clear"
        android:textColor="#0097A7"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/multiply"
        app:layout_constraintEnd_toStartOf="@+id/percentage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:focusable="true" />

    <Button
        android:id="@+id/percentage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/modulus"
        android:textColor="#0097A7"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toStartOf="@+id/erase"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/erase"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toTopOf="@+id/addition"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/percentage"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/divide"
        android:textColor="#0097A7"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/equal"
        app:layout_constraintEnd_toEndOf="@id/mod"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/erase"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/seven"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <Button
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/eight"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/addition" />

    <Button
        android:id="@+id/nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/nine"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintEnd_toStartOf="@+id/doubleZero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/equal" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/x1"
        android:textColor="#0097A7"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <Button
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/four"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/five"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/six"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toStartOf="@+id/doubleZero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:contentDescription="@string/todo"
        android:text="@string/minus1"
        android:textColor="#0097A7"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/addition"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multiply"
        app:layout_constraintTop_toBottomOf="@+id/percentage"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/one"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/two"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/three"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/doubleZero"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/addition"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/add"
        android:textColor="#0097A7"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minus"
        app:layout_constraintTop_toBottomOf="@+id/erase" />

    <Button
        android:id="@+id/doubleZero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/doubleZero"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/decimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/zero" />

    <Button
        android:id="@+id/zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/zero"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/doubleZero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/power" />

    <Button
        android:id="@+id/equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/equal"
        android:textColor="#0097A7"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@id/power"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addition"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <Button
        android:id="@+id/decimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="@string/decimal"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/doubleZero" />

    <Button
        android:id="@+id/mod"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="mod"
        android:textColor="#0097A7"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divide"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/power"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/actionBarItemBackground"
        android:text="^"
        android:textColor="#0097A7"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@id/zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/equal"
        app:layout_constraintTop_toBottomOf="@+id/mod" />

</androidx.constraintlayout.widget.ConstraintLayout>